--- a/.htaccess
+++ b/.htaccess
@@ -2,5 +2,5 @@
     RewriteEngine on
     RewriteCond %{SCRIPT_FILENAME} !-d
     RewriteCond %{SCRIPT_FILENAME} !-f
-    RewriteRule ^(.*)/(.) ?controller=$1&action=$2
+    RewriteRule ^(.*)/(.) index.php?controller=$1&action=$2&%(QUERY_STRING)
 </IfModule>
